# NTIA_interp

./: .gitignore  Dockerfile  pcap_to_txt.py  pyproject.toml  train_model.py
interp/: analyze_architecture_fit.py  analyze_token_importance.py  attribution_summary.txt  check_method.py  confusion.py  hook_keys.txt  inspect_model_bias.py  inspect_model_structure.py  interp_logit_lens.py  model_viz.py  output.txt  output_labels.txt  token_importance.html  token_importance_PROTOCOL.html  token_importance_TRANSPORT.html  verify_fold_ln.py  verify_html_scores.py
tokenizer_naive/: merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  train_tokenizer.py  vocab.json
utils/: debug_tok.py  dry.py  eval2.py  find_samples.py  gendata2.py  model_overtrain.py  model_probe.py  model_train.py  pcap_detailed_export.py  process_val.py  relabel.py  scan_samples.py  tok_test.py
validation/: OAI_CU_connection_Log_1.pcapng  OAI_CU_connection_Log_1.pcapng.txt  OAI_DU_Connection_Log1.pcapng  OAI_DU_Connection_Log1.pcapng.txt
